# Django-Chat

./: .gitignore  pyproject.toml
chat/: consumers.py  routing.py
chat/templates/chat/: room.html
core/: asgi.py  settings.py
