[tool.poetry]
name = "chatroom"
version = "0.1.0"
description = "Text Chatting application for bingeman"
authors = ["Satyarth <satyarthdev@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
channels = "^3.0.4"
Django = "^3.2.7"
channels-redis = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
flake8 = "^3.9.0"
autopep8 = "1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
